# Azoth

./: .gitignore  README.md
bot/: .env.example  Cargo.toml
bot/src/: azoth.rs  commands.rs  data.rs  exmaple.rs  hooks.rs  main.rs  recurring.rs
bot/src/commands/: github.rs  misc.rs  mod.rs  quiz.rs
lib/: Cargo.toml
lib/src/: discord.rs
